--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             margin: 0 auto;
         }
         .hero {
-            background-image: url('imagen1.jpg');
+            background-image: url('imagen1.png');
             background-size: cover;
             background-position: center;
             color: #fff;
@@ -133,12 +133,12 @@
                 </div>
             </section>
             <div class="image-box">
-                <img src="imagen2.jpg" alt="Imagen del juego">
+                <img src="imagen2.png" alt="Imagen del juego">
             </div>
             <div class="characters">
-                <img src="imagen1.jpg" alt="Personaje 1">
-                <img src="imagen2.jpg" alt="Personaje 2">
-                <img src="imagen3.jpg" alt="Personaje 3">
+                <img src="imagen1.png" alt="Personaje 1">
+                <img src="imagen2.png" alt="Personaje 2">
+                <img src="imagen3.png" alt="Personaje 3">
             </div>
         </div>
     </main>
