--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <h2>Descargar</h2>
                     <p>Puedes descargar Samurai's Path Destiny desde las siguientes plataformas:</p>
                     <ul>
-                        <li><a href="#">PC</a></li>
+                        <li><a href="U.G.D7.zip" download>PC</a></li>
                     </ul>
                 </div>
             </section>
